--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,293 @@
-body {
+@import "https://fonts.googleapis.com/css2?family=Mulish:wght@300;400;500;600;700;800;900&display=swap";
+* {
+  padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  list-style: none;
+  border: 0;
+  outline: none;
+  text-decoration: none;
+  box-sizing: border-box;
   -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+}
+html,
+body {
+    background-image: linear-gradient( 135deg, #FDD819 10%, #E80505 100%);
+
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  font-family: "Mulish", sans-serif;
+  height: 100%;
+}
+body {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+
+.yt-icon{
+  width: 100px;
+}
+
+form {
+  text-align: center;
+}
+form h3 {
+  font-size: 50px;
+  font-weight: 900;
+  margin-bottom: 30px;
+}
+form .search {
+  display: flex;
+  width: 700px;
+}
+
+form .search input {
+  flex: 1;
+  height: 50px;
+  border-radius: 20px 0 0 20px;
+  border: 2px solid #ddd;
+  font-size: 20px;
+  padding: 0 20px;
+  border-right: none;
+}
+
+form .search input:focus {
+  border-color: #6495ed;
+}
+
+form .search input:focus + button {
+  border-color: #6495ed;
+  background: #6495ed;
+  color: #fff;
+}
+form .search button {
+  width: 130px;
+  height: 50px;
+  border-radius: 0 20px 20px 0;
+  font-size: 20px;
+  background: #f5f5f5;
+  color: #333;
+  border: 2px solid #ddd;
+  cursor: pointer;
+}
+
+form .search button:hover {
+  background: #eee;
+}
+
+.loader {
+  padding-top: 15px;
+  font-size: 20px;
+  letter-spacing: 2px;
+  color: #666;
+  position: relative;
+  margin: auto;
+  text-align: center;
+}
+
+.result {
+  width: 700px;
+}
+.result .video-item {
+  margin-top: 20px;
+  display: flex;
+  align-items: center;
+  border: 2px solid #ddd;
+  padding: 15px;
+  border-radius: 10px;
+}
+.result .video-item img {
+  height: 120px;
+  border-radius: 5px;
+  margin-right: 15px;
+}
+.result .video-item .video-details > div {
+  display: flex;
+  align-items: center;
+  padding-bottom: 6px;
+}
+
+.result .video-item .video-details span {
+  color: rgba(34, 34, 34, 0.6);
+  width: 140px;
+}
+
+.result .video-item .video-details .title {
+  font-size: 25px;
+  font-weight: 800;
+}
+.result ul {
+  margin-top: 30px;
+}
+
+.result ul li {
+  display: flex;
+  align-items: center;
+  margin-bottom: 15px;
+  border: 2px solid #ddd;
+  height: 60px;
+  border-radius: 60px;
+  padding: 0 10px 0 30px;
+}
+
+.result ul li > div span {
+  font-size: 18px;
+  color: rgba(34, 34, 34, 0.6);
+  margin-right: 15px;
+  padding-right: 15px;
+  border-right: 2px solid #ddd;
+}
+
+.result ul li > div {
+  margin-right: 40px;
+  font-size: 20px;
+  font-weight: 800;
+}
+
+.result ul li a {
+  margin-left: auto;
+  height: 40px;
+  border-radius: 40px;
+  background: #088808;
+  display: flex;
+  align-items: center;
+  padding: 0 30px;
+  font-size: 20px;
+  color: #fff;
+}
+
+.result ul li a:hover {
+  background: #077007;
+}
+
+.must{
+  text-align: center;
+  margin-top: 4
+  0px;
+}
+/*# sourceMappingURL=style.css.map */
+
+@media only screen and (max-width: 715px) {
+
+    body {
+        background-image: linear-gradient( 135deg, #FDD819 10%, #E80505 100%);
+      -webkit-background-size: cover;
+      -moz-background-size: cover;
+      -o-background-size: cover;
+      background-size: cover;
+      font-family: "Mulish", sans-serif;
+      height: 100%;
+    }
+
+  form .search {
+    display: flex;
+    width: 90%;
+    margin-left: 5%;
+  }
+
+  form .search input {
+    flex: 1;
+    height: 40px;
+    border-radius: 20px 0 0 20px;
+    border: 2px solid #ddd;
+    font-size: 15px;
+    padding: 0 20px;
+    border-right: none;
+  }
+  form .search button {
+    width: 130px;
+    height: 40px;
+    border-radius: 0 50px 50px 0;
+    font-size: 15px;
+    background: #f5f5f5;
+    color: #333;
+    border: 2px solid #ddd;
+    cursor: pointer;
+  }
+
+  .result {
+      width: 95%;
+      margin-left: auto;
+      margin-right: auto;
+
+  }
+
+  .result .video-item {
+    margin-top: 20px;
+    display: flex;
+    align-items: center;
+    border: 2px solid #ddd;
+    padding: 15px;
+    border-radius: 10px;
+  }
+  .result .video-item img {
+    height: 90px;
+    border-radius: 5px;
+    margin-right: 15px;
+  }
+  .result .video-item .video-details > div {
+    display: flex;
+    align-items: center;
+    padding-bottom: 6px;
+  }
+  
+  .result .video-item .video-details span {
+    color: rgba(34, 34, 34, 0.6);
+    width: 120px;
+  }
+  
+  .result .video-item .video-details .title {
+    font-size: 14px;
+    font-weight: 800;
+  }
+  .result ul {
+    margin-top: 30px;
+  }
+  
+  .result ul li {
+    display: flex;
+    align-items: center;
+    margin-bottom: 15px;
+    border: 2px solid #ddd;
+    height: 60px;
+    border-radius: 20px;
+    padding: 0 10px 0 5px;
+  }
+  
+  .result ul li > div span {
+    font-size: 15px;
+    color: rgba(34, 34, 34, 0.6);
+    margin-right: 7px;
+    padding-right: 15px;
+    border-right: 2px solid #ddd;
+  }
+  
+  .result ul li > div {
+    margin-right: 20px;
+    font-weight: 800;
+  }
+  
+  .result ul li a {
+    margin-left: auto;
+    height: 30px;
+    border-radius: 40px;
+    background: #088808;
+    display: flex;
+    align-items: center;
+    padding: 0 10px;
+    font-size: 10px;
+    color: #fff;
+  }
+
+  .top-title h3{
+    font-size: 30px;
+  }
+
+  .yt-icon{
+    width: 50px;
+  }
 }
